Fix CSS syntax inconsistencies and improve formatting for better readability

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   background-size: cover;
   background-attachment: fixed;
   color: var(--text-color);
-  font-family: 'IBM Plex mono', monospace;
+  font-family: "IBM Plex mono", monospace;
   font-size: 18px;
   line-height: 1.3;
 }
@@ -112,7 +112,7 @@
 }
 
 .header__rec::after {
-  content: '';
+  content: "";
   display: inline-block;
   inline-size: 9px;
   block-size: 9px;
@@ -126,7 +126,7 @@
 }
 
 .decorated-zone::before {
-  content: '';
+  content: "";
   position: absolute;
   inset-block-start: 10px;
   inset-inline-end: 10px;
@@ -137,7 +137,7 @@
 }
 
 .decorated-zone::after {
-  content: '';
+  content: "";
   position: absolute;
   inset-block-end: 10px;
   inset-inline-start: 10px;
@@ -202,7 +202,6 @@ main .section:last-child {
 }
 
 @media (width >=768px) {
-
   .header {
     min-block-size: 1024px;
     padding: 20px;
@@ -241,7 +240,7 @@ main .section:last-child {
     grid-template-columns: 236px 1fr;
   }
 
-  .section-reasons>* {
+  .section-reasons > * {
     grid-column: 2;
   }
 
@@ -268,7 +267,7 @@ main .section:last-child {
     grid-template-columns: 236px 1fr;
   }
 
-  .section-tips>* {
+  .section-tips > * {
     grid-column: 2;
     grid-row-start: auto;
     grid-row-end: auto;
@@ -345,11 +344,9 @@ main .section:last-child {
   .section {
     padding-inline: 20px;
   }
-
 }
 
 @media (width >=1024px) {
-
   .header {
     min-block-size: 768px;
   }
@@ -375,7 +372,7 @@ main .section:last-child {
 
   .section-concentration {
     grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
-    grid-template-areas: "title . . . "
+    grid-template-areas: "title . . .";
   }
 
   .section-concentration .section__title {
@@ -398,7 +395,6 @@ main .section:last-child {
 
   .section-gallery {
     grid-template-areas: "subtitle subtitle subtitle";
-    ;
   }
 
   .section-gallery .title-decor {
